--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist = py27
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/travisdemo
+    #PYTHONPATH = {toxinidir}:{toxinidir}/travisdemo
+    PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
 commands =
